--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,50 +1,12 @@
-/* .App {
-  text-align: center;
-} */
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 .full-page {
+  position: relative;
+  min-height: 100vh;
   text-align: center;
   background-color: #f2f2f2;
-  margin-bottom: 250px;
-  padding-bottom: 250px;
 }
 .title-container {
   background-color: white;
-  box-shadow: 0px 10px 8px lightgrey;
+  box-shadow: 0px 5px 5px lightgrey;
   padding-bottom: 10px;
   /* color: red; */
 }
@@ -66,20 +28,23 @@
   padding-left: 50px;
   /* padding-right: 50px; */
 }
-.score{
+.score {
   font-size: xx-large;
-  
 }
-.score-container{
+.score-container {
   background-color: #864dc0;
-  padding: 30px;
-  border-radius: 50px;
-  margin-top: 80px;
+  padding: 10px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 50px;
   color: white;
   font-weight: bolder;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.questions-container{
- 
+.questions-container {
   padding: 30px;
   border-radius: 50px;
   margin-top: 80px;
@@ -92,26 +57,49 @@ ul {
   list-style: none;
   display: inline-flex;
 }
+.answer-feedback {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 400px;
+  height: auto;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: x-large;
+  font-weight: bold;
+  background-color: white;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+}
+.incorrect-answer {
+  color: red;
+}
+.correct-answer {
+  color: green;
+}
 .answerButtonContainer {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly; 
+  justify-content: space-evenly;
 }
 
 .answerButtonContainer li {
-  flex: 0 0 50%; 
-  box-sizing: border-box; 
+  flex: 0 0 50%;
+  box-sizing: border-box;
 }
 .answerButtons {
   padding: 25px;
   font-size: large;
-  color: #fff; 
+  color: #fff;
   text-align: left;
   padding-left: 70px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   margin: 2px;
   border-radius: 5px;
@@ -120,32 +108,87 @@ ul {
 
 .button1 {
   width: 98%;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   background-color: #3498db;
-  
- 
-  
 }
-  
 
 .button2 {
   width: 98%;
-  box-sizing: border-box; 
-  background-color: #e74c3c; 
- 
- 
+  box-sizing: border-box;
+  background-color: #e74c3c;
 }
 .button3 {
   width: 98%;
-  box-sizing: border-box; 
-  background-color: orange; 
-   
-  
+  box-sizing: border-box;
+  background-color: orange;
 }
 .button4 {
   width: 98%;
-  box-sizing: border-box; 
-  background-color: green; 
-  
-  
+  box-sizing: border-box;
+  background-color: green;
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal {
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  min-height: 50vh;
+  min-width: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.modal-text {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: xx-large;
+  margin-bottom: 20px;
+}
+
+.modal-score-container {
+  background-color: #864dc0;
+  padding: 10px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  color: white;
+  font-weight: bolder;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: xx-large;
+}
+.play-again-button {
+  font-size: large;
+  cursor: pointer;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 40%;
+  text-align: center;
+  padding: 10px;
+  background-color: green;
+  border-radius: 10px;
+  box-shadow: 0 0 70px rgba(0, 0, 0, 0.6);
+  color: white;
+  transition: transform 0.3s ease;
+}
+
+.play-again-button:hover {
+  transform: scale(1.3);
 }
